2003-04-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: fixed modem autodetection, now it works before and
	after a ppp session

2003-03-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in, network.pl.in: added modem autodetection directive

2003-03-13  Christian Neumair  <chris@gnome-de.org>

	* .cvsignore: Updated.
	* users-conf.in: Added Gentoo to list of supported platforms.
	* rhprinterdb2gstxml.pl: Added.
	* rhprinterdb2xstxml.pl: Removed, renamed to rhprinterdb2gstxml.pl.

2003-03-12  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* time-conf.in, boot-conf.in, users-conf.in, platform.in:
	  patch by Todd Kulesza <todd@dropline.net>, it adds support
	  for Slackware 8.1 in time-admin, boot-admin and users-admin.

2003-03-12  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in: now stores fine both IPv4 and IPv6 
	  addresses in the /etc/hosts file

2003-03-08  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.24.0

2003-03-08  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-conf.in, boot.pl.in, partition.pl.in: modified to include
	  partition list info in the xml (it sends the device and partition
	  type for each partition)

2003-03-04  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-lilo.pl.in: lilo needs the vga settings in the "vga" entry, not
	  in the "append" entry. Fixed

2003-02-21  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.23.0

2003-02-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service-list.pl.in: added more service descriptions, patch by Martin
	  Lundberg <martin.lundberg3@telia.com>

2003-02-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: require autoconf 2.52 or bigger.

2003-02-06  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: added more modem options for ppp connection, such
	  as modem volume and dialing type (pulses, tones)

2003-01-14  Carlos Garnacho Parro  <garnacho@tuxerver.net>
